--- a/resources/BELA-00A0.dts
+++ b/resources/BELA-00A0.dts
@@ -30,7 +30,7 @@
 		"P9.25",
 		"P9.30",
 
-		/* PRU */
+		/* PRU for mutliplexer capelet */
 		"P8.41",
 		"P8.42",
 		"P8.43",
@@ -88,7 +88,7 @@
 				>;
 			};
 
-			/* Pin mux for PRU */
+			/* Pin mux for PRU GPIOs for multiplexer capelet */
 			pru_bela_pins: pinmux_pru_bela_pins {
 				pinctrl-single,pins = <
 					0x0b0 0x25 /* pr1_pru1_pru_r30_4,	P8_41 | MODE5 | OUTPUT_PULLDOWN */
