--- a/IDE/package.json
+++ b/IDE/package.json
@@ -19,6 +19,7 @@
     "pgrep": "0.0.6",
     "pidusage": "^1.0.1",
     "socket.io": "^1.4.5",
+    "toobusy-js": "^0.5.1",
     "tree-kill": "^1.0.0"
   },
   "devDependencies": {}
