Getting analogs to work again, merging in patch suggested by @henrix https://github.com/BelaPlatform/Bela/commit/f166276604bf01662a7ab353c95d76ca77f6bd12#commitcomment-22230287

--- a/resources/am335x-bone-bela.dts
+++ b/resources/am335x-bone-bela.dts
@@ -193,3 +193,10 @@
 		#gpio-cells = <2>;
 	};
 };
+
+&spi0 {
+       pinctrl-names = "default";
+       pinctrl-0 = <&bela_spi0_pins>;
+
+       status = "okay";
+};
