--- a/IDE/package.json
+++ b/IDE/package.json
@@ -14,12 +14,14 @@
   "devDependencies": {
     "@types/chai": "^4.1.3",
     "@types/es6-shim": "^0.31.37",
+    "@types/express": "^4.11.1",
     "@types/file-type": "^5.2.1",
     "@types/fs-extra-promise": "^1.0.5",
     "@types/mocha": "^5.2.0",
     "@types/mock-fs": "^3.6.30",
-    "@types/node": "^8.5.5",
+    "@types/node": "^8.10.14",
     "@types/read-chunk": "^2.1.0",
+    "@types/socket.io": "^1.4.33",
     "chai": "^4.1.2",
     "gulp": "^4.0.0",
     "gulp-livereload": "^3.8.1",
