--- a/IDE/package.json
+++ b/IDE/package.json
@@ -21,6 +21,7 @@
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^8.10.14",
     "@types/read-chunk": "^2.1.0",
+    "@types/sinon": "^4.3.3",
     "@types/socket.io": "^1.4.33",
     "chai": "^4.1.2",
     "gulp": "^4.0.0",
@@ -30,6 +31,7 @@
     "gulp-typescript": "^4.0.2",
     "mocha": "^5.1.1",
     "mock-fs": "^4.5.0",
+    "sinon": "^5.0.7",
     "typescript": "^2.8.3"
   },
   "dependencies": {
