--- a/IDE/package.json
+++ b/IDE/package.json
@@ -12,11 +12,13 @@
   "author": "Liam Donovan",
   "license": "ISC",
   "devDependencies": {
+    "@types/archiver": "^2.1.1",
     "@types/chai": "^4.1.3",
     "@types/es6-shim": "^0.31.37",
     "@types/express": "^4.11.1",
     "@types/file-type": "^5.2.1",
     "@types/fs-extra-promise": "^1.0.5",
+    "@types/mime": "^2.0.0",
     "@types/mocha": "^5.2.0",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^8.10.14",
@@ -40,6 +42,7 @@
     "file-type": "^7.7.1",
     "fs-extra-promise": "^1.0.1",
     "isbinaryfile": "^3.0.2",
+    "mime": "^2.3.1",
     "pgrep": "0.0.6",
     "pidtree": "^0.3.0",
     "pidusage": "^2.0.6",
