--- a/resources/tools/board_detect/Makefile
+++ b/resources/tools/board_detect/Makefile
@@ -1,5 +1,5 @@
 board_detect:
-	gcc main.c board_detect.c -o board_detect
+	gcc main.cpp -I../../../include  board_detect.cpp -o board_detect
 
 install: board_detect
 	cp board_detect /usr/local/bin/
